# Plan-recognition-error-detection

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: PARC.cbp  PARC.depend  PARC.layout  main.cpp
src/context/: extendedPlanLibrary.cpp  planLibrary.cpp  probabilityDistribution.cpp  rule.cpp
src/headers/: CognitiveDistressManagement.h  extendedPlanLibrary.h  planLibrary.h  probabilityDistribution.h  rule.h  solver.h
src/include/: CognitiveDistressManagement.h  bnflite.h  cognitive_distress_management.h  extendedPlanLibrary.h  extended_plan_library.h  fileManager.h  file_manager.h  plan_library.h  probabilityDistribution.h  probability_distribution.h  rule.h  solver.h
src/object/: CognitiveDistressManagement.cpp  cognitive_distress_management.cpp  extendedPlanLibrary.cpp  extended_plan_library.cpp  main.cpp  planLibrary.cpp  plan_library.cpp  probabilityDistribution.cpp  probability_distribution.cpp  rule.cpp  solver.cpp
src/solver/: CognitiveDistressManagement.cpp  solver.cpp
